2019-1/230/users/1193/executions/1762_1185.log
== TEST (2019-05-27 16:10:19) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v>0):
	i=i+1
	if(v[0]>99):
		print(v[0])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:11:05) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i>0):
	i=i+1
	if(v[0]>99):
		print(v[0])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:11:44) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i>0):
	i=i+1
	if(v[i]>99):
		print(v[0])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:12:12) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i>0):
	i=i+1
if(v[i]>99):
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:12:36) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i>0):
	i=i+1
if(v[i]>99):
	print(v[0])
-- EXECUTION TIME:
0.417351
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
101
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:

-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:12:40) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i>0):
	i=i+1
if(v[i]>99):
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:13:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i<size(v)):
	i=i+1
if(v[i]>99):
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:14:38) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i<size(v)):
	i=i+1
if(v(i)>99):
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:16:12) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i<size(v)):
	i=i+1
if(v[i]>99):
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:16:26) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(i<size(v)):
	i=i+1
	if(v[i]>99):
		print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:18:51) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
	print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:20:08) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:21:28) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
print(v[i:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:21:48) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
print(v[i:>99])
-- ERROR:
File "XXXX", line 7
    print(v[i:>99])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:22:09) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	i=i+1
print((v[i:])>99)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:22:55) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>99):
	print(v[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:25:14) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>i):
	i=i+1
	b=b+1
	print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:26:35) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=b):
	i=i+1
	b=b+1
	print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:27:08) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=b):
	i=i+1
	b=b+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:28:59) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=b):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:29:09) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=i):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:31:29) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]>0):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:32:40) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=1):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:33:32) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(v[i]!=i):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:33:59) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)!=i):
	i=i+1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:34:17) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)!=i):
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:34:43) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)!=i):
	i=i+1
	print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:15:51) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)!=i):
	i=i+1
	print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:19:39) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	i=i+1
	if(i>99):
		print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:20:01) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		print(v[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:20:28) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		print(v[i])
i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:20:58) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)<i):
	if(i>99):
		print(v[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:21:30) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i<99):
		print(v[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:22:11) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	i=i+1
	if(i<99):
		print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:23:11) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		print(v[i])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:23:27) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	i=i+1
	if(i>99):
		print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:24:39) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i<99):
		i=i+1
	else:
		print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:34:09) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		b=b+1
		print(b)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:34:42) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:35:31) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)<i):
	if(i>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:35:43) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(i>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:36:25) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:36:42) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>=i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:36:57) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)=>i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
File "XXXX", line 5
    while(size(v)=>i):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:37:33) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>=i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:37:52) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:38:07) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>=99):
		b=b+1
		print(i)
	i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:38:25) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>=99):
		b=b+1
		print(i)
	i=i+1
-- EXECUTION TIME:
0.508756
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
7
9
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:38:29) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>=99):
		b=b+1
		print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:40:01) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:41:31) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			b=b+1
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:42:05) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:42:37) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(i)
	i=i+1
-- EXECUTION TIME:
0.412769
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
7
9
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:44:00) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
		print(i)
	i=i+1
-- ERROR:
File "XXXX", line 11
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:44:39) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:45:02) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 06:46:06) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 06:46:06) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
print(b)
-- EXECUTION TIME:
0.482721
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
0
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
7
9
1
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
:0
3
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:03:06) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:03:45) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]==99):
		b=b+1
		print(i)
	else:
		if(v[i]>99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:07:25) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:08:28) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			b=b+1
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:09:16) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)<i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:12:44) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		me=i
	else:
		if(v[i]==99):
			me1=i
	i=i+1
	print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:13:10) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
me=0
me1=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		me=i
	else:
		if(v[i]==99):
			me1=i
	i=i+1
	print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:13:56) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
me=0
me1=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		me=i
	else:
		if(v[i]==99):
			me1=i
	i=i+1
	print(me>0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:17:40) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(-1,i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:18:09) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	else:
		if(v[i]==99):
			print(i[-1])
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:19:24) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:19:33) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		b=b+1
		print(i)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:21:44) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 07:21:56) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
	i=i+1
print(b)
-- EXECUTION TIME:
0.454035
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:24:08) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
	i=i+1
	else:
		print(b)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:24:24) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
	else:
		print(b)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:24:49) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
		i=i+1
	else:
		print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:25:20) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
		i=i+1
	else:
		print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:25:34) 
-- CODE:
from numpy import*
v=eval(input(":"))
i=0
b=0
while(size(v)>i):
	if(v[i]>99):
		print(i)
		b=b+1
	i=i+1
	else:
		print(b)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
